[package]
name = "hotstuff2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["testbed", "example"]
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
blst = "0.3.11"
bit-vec = "0.6.3"
anyhow = "1.0"
parking_lot = "0.12.1"
async-trait = "0.1.77"

[dev-dependencies]
rand = "0.8.0"
proptest = "1.4.0"
loom = "0.7.1"
