[package]
name = "hotstuff2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["example", "fuzz"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
blst = "0.3.11"
bit-vec = "0.6.3"
anyhow = "1.0"
parking_lot = "0.12.1"
hex = "0.4.3"
ctrlc = "3.4.4"
tracing = "0.1.40"
itertools = "0.12.1"
arbitrary = { version = "1.0.3", features = ["derive"] }

[dev-dependencies]
rand = "0.8.0"
proptest = "1.4.0"
