[package]
name = "hotstuff2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["example"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
blst = "0.3.11"
bit-vec = "0.6.3"
anyhow = "1.0"
parking_lot = "0.12.1"
hex = "0.4.3"
tracing = "0.1.40"
itertools = "0.12.1"

[dev-dependencies]
rand = "0.8.0"
proptest = "1.4.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }

[profile.release]
opt-level = 3
lto = true
debug = 1