[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
async-trait = "0.1.77"
bit-vec = "0.6.3"
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
hotstuff2 = { path = "../" }
humantime = "2.1.0"
metrics = "0.22.0"
parking_lot = "0.12.1"
quinn = "0.10.2"
rcgen = "0.12.0"
rustls = { version = "0.21.0", default-features = false, features = ["quic"]}
tokio = { version = "1.35.1", features = ["full"] }
tokio-scoped = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
