[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
async-trait = "0.1.77"
bit-vec = "0.6.3"
blake3 = "1.5.1"
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.4"
futures = "0.3.30"
hex = "0.4.3"
hotstuff2 = { path = "../" }
humantime = "2.1.0"
metrics = "0.22.0"
opentelemetry = "0.22.0"
opentelemetry-jaeger = "0.21.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
parking_lot = "0.12.1"
quinn = "0.10.2"
rand = "0.8.5"
rcgen = "0.12.0"
ipnet = "2.9.0"
rustls = { version = "0.21.0", default-features = false, features = ["dangerous_configuration", "quic"]}
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.10.1"
tokio = { version = "1.35.1", features = ["full", "macros"] }
tokio-test = "0.4.4"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
prost = "0.12.4"
bytes = "1.6.0"

[build-dependencies]
prost-build = "0.5"
