[package]
name = "example-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
hotstuff2 = { path = "../" }

[[bin]]
name = "twins_basic"
path = "fuzz_targets/twins_basic.rs"
test = false
doc = false
