[package]
name = "testbed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hotstuff2 = { path = "../" }
serde_json = "1.0.113"
serde = { version="1.0.196", features = ["derive"] }
rand = "0.8.0"
hex = "0.4.3"
